# prolab

./: .gitignore  .gitmodules  README.md  flowchart.drawio  start_my_ros_v1.sh  start_my_ros_v2.sh
models/tagged_blue_box/: model.config  model.sdf
models/tagged_green_box/: model.config  model.sdf
models/tagged_orange_box/: model.config  model.sdf
models/tagged_red_box/: model.config  model.sdf
scripts/: merge_maps.py  save_maps.py
scripts/analyse/: compute_metrics.py  load_bag.py  main.py  plot_results.py
scripts/apriltag/: another_playground.world  generate_apriltag.py
scripts/cluster_lm/: cluster_landmarks.py  mapped_landmarks.yaml  mapped_landmarks_clustered.yaml
scripts/ekf_analysis/: main.py  plot_results.py
scripts/kf_analysis/: compute_metrics.py  plot_results.py
scripts/pf_analysis/: load_bag.py  plot_results.py
scripts/plot_lm/: final_landmarks.yaml  final_landmarks_deg.yaml  mapped_landmarks.yaml  visualize_landmarks.py
src/: color_sampler.cpp
src/ekf_node/: CMakeLists.txt  ekf.launch  package.xml
src/ekf_node/config/: landmark_map.yaml
src/ekf_node/scripts/: sim_landmark_pub.py
src/ekf_node/src/: ekf_localization.cpp  ekf_node.cpp
src/example_package/: CMakeLists.txt  package.xml
src/example_package/config/: config.rviz  global_costmap.yaml  local_costmap.yaml  waypoints.yaml
src/example_package/include/: waypoint_nav.h
src/example_package/launch/: navigation.launch  start.launch  start_v1.launch  start_v2.launch
src/example_package/map/: merged_map.pgm
src/example_package/scripts/: waypoint_nav.py
src/example_package/src/: waypoint_nav.cpp
src/example_package/urdf/: turtlebot3_burger_for_autorace.gazebo.xacro  turtlebot3_burger_for_autorace.urdf.xacro
src/example_package/world/: another_playground.world
src/filter_node/: CMakeLists.txt  package.xml
src/filter_node/include/: ekf.h  kf.h  pf.h
src/filter_node/launch/: filter.launch  start.launch
src/filter_node/maps/: my_map.pgm
src/filter_node/src/: ekf.cpp  kf.cpp  main.cpp  pf.cpp
src/filter_node_wlm/: CMakeLists.txt  package.xml
src/filter_node_wlm/landmarks/: landmarks_gt.yaml
src/kf_node/: CMakeLists.txt  kf.launch  package.xml
src/kf_node/src/: another_kf.cpp  (+2 more)
src/landmark_mapper/: CMakeLists.txt  landmark_map.yaml  landmark_map_colored.yaml  package.xml  start.launch
src/landmark_mapper/config/: settings.yaml  tags.yaml
src/landmark_mapper/data/: landmarks_raw.yaml  mapped_landmarks.yaml
src/landmark_mapper/include/color_sampler_node/: color_sampler_node.h
src/landmark_mapper/include/landmark_mapper/: color_sampler.h  landmark_mapper.h
src/landmark_mapper/launch/: apriltag.launch  mapping.launch
src/landmark_mapper/msg/: ColorSample.msg
src/landmark_mapper/output/: landmarks_mapped copy.yaml  landmarks_mapped.yaml  landmarks_raw.yaml
src/landmark_mapper/src/: color_sampler.cpp  color_sampler_node.cpp  landmark_mapper.cpp
src/pf_node/: CMakeLists.txt  package.xml  particle_filter.launch  pf.launch
(+101 files in other folders)
